# ctn_testing

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  STORING_SECRETS.md  pyproject.toml  pyrightconfig.json
ctn_testing/: __init__.py  cli.py
ctn_testing/browser/: __init__.py  app.py  components.py  data.py
ctn_testing/core/: __init__.py  config.py  document.py  ground_truth.py  models.py  schemas.py  types.py
ctn_testing/core/loaders/: __init__.py  base.py  docile.py  text.py
ctn_testing/judging/: __init__.py  blind_judge.py  traits.py
ctn_testing/metrics/: __init__.py  scorer.py
ctn_testing/runners/: __init__.py  constraint_runner.py  document.py  evaluation.py  http_runner.py  judge.py  kernel.py  output.py  results.py  runner.py
ctn_testing/statistics/: __init__.py  comparison.py  constraint_analysis.py
ctn_testing/utils/: __init__.py  hashing.py  logger.py  network.py
docs/: CTN_EXTRACTION_TEST_PLAN_v2.md  DEVELOPER.md  FUTURE_DIRECTIONS.md
domains/constraint_adherence/configs/: all_constraints_ctn.yaml  (+8 more)
scripts/: activate.ps1  check.ps1  check_results.ps1  create_tier3_prompts.py  data_analysis1.py  data_analysis2_stats.py  docile_fields.py  docile_multi_test.py  docile_test.py  fix_field_names.ps1  lint.sh  rejudge.py  run_evaluation.py  smoke_test.py
tests/: test_blind_judge.py  test_browser_data.py  test_constraint_analysis.py  test_constraint_runner.py  test_evaluation.py  test_http_runner.py  test_output.py  test_persistence.py  test_progress_output.py  test_rejudge.py  test_results_persistence.py  test_scorer_adversarial.py
(+43 files in other folders)
